# spfs

./: .gitignore  CMakeLists.txt  Makefile  README.md  dist.info
fs/: Makefile  ufs.c
include/: spclient.h  spfs.h
libspclient/: Makefile  fsys.c  netmount.c  poll.c  walk.c
libspclient/examples/: 9ls.c  9read.c  9read2.c  9write.c  Makefile
libspfs/: CMakeLists.txt  Makefile  conn.c  error.c  fcall.c  fidpool.c  file.c  fmt.c  np.c  poll.c  pvusers.c  socksrv.c  srv.c  user.c  uxusers.c
src/: spfs.c  spfs.h
